[gd_scene load_steps=3 format=3 uid="uid://c5x80a01a2b3c"]

[ext_resource type="Script" path="res://views/animal_album/animal_card.gd" id="1_card"]
[ext_resource type="FontFile" uid="uid://dka4pv05igpyj" path="res://assets/fonts/RHR-CN-0.990/ResourceHanRoundedCN-Heavy.ttf" id="2_font"]

[node name="AnimalCard" type="Panel"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
pivot_offset = Vector2(20, 20)
script = ExtResource("1_card")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(19.999998, 19.999998)
scale = Vector2(0.165, 0.165)

[node name="animalLabel" type="Label" parent="Sprite2D"]
offset_left = -115.15152
offset_top = -213.63637
offset_right = 115.15152
offset_bottom = -159.09091
theme_override_colors/font_color = Color(0.3526, 0.71094, 0.82, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 35
text = "动物名称"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Sprite2D"]
offset_left = -127.27272
offset_top = -165.1515
offset_right = 128.72728
offset_bottom = -128.1515
theme_override_colors/font_color = Color(0.468, 0.6612, 0.72, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 25
text = "拥有数量0/3"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Sprite2D"]
offset_left = -127.27272
offset_top = 133.33334
offset_right = 127.27272
offset_bottom = 370.33334
theme_override_colors/font_color = Color(0.468, 0.6612, 0.72, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 25
text = "攻击方式：
攻击频率：
连击上限：
特殊技能：
特殊技能消耗能量："
horizontal_alignment = 1
